# CPrimerPlus5thEdition

./: .gitignore  CMakeLists.txt  github  words
chapter02/: excise1.c  excise8.c  exercise2.c  fathm_ft.c  first.c  nogood.c  two_func.c
chapter03/: altnames.c  badcount.c  bases.c  charcode.c  escape.c  exercise3.c  floaterr.c  print1.c  print2.c  rhodium.c  showfloat.c  toobig.c  typesize.c
chapter04/: constants.c  defines.c  exercise04.c  flags.c  floatcnv.c  floats.c  input.c  intconv.c  longstring.c  pizza.c  praise1.c  praise2.c  printout.c  printvalue.c  skip2.c  strings.c  talkback.c  varwidth.c  wd.c
chapter05/: add_one.c  addemup.c  bottles.c  convert.c  divide.c  exercise05.c  golf.c  min_sec.c  post_pre.c  pound.c.c  rules.c  running.c  shoes1.c  shoes2.c  sizeof.c  squares.c  wheat.c
chapter06/: boolean.c  cmpflt.c  do_while.c  exercise06.c  exercise06_15_09.c  for_13a.c  for_char.c  for_cube.c  for_down.c  for_geo.c  for_none.c  for_show.c  for_wild.c  postage.c  power.c  recurse.c  row2.c  rows1.c  scores_in.c  summing.c  sweetie1.c  sweetie2.c  t_and_f.c  trouble.c  truth.c  zeno.c
chapter07/: animals.c  break.c  charcount.c  colddays.c  cypher1.c  cypher2.c  divisors.c  electric.c  excercise07.c  paint.c  skippart.c  vowel.c  wordcount.c
chapter08/: checking.c  echo.c  echo_eof.c  excercise08.c  file_eof.c  guess.c  lyrics.txt  menuette.c  showchar1.c
chapter09/: binary.c  excise09.c  factor.c  hotel.c  hotel.h  lesser.c  letterhead.c  letterhead2.c  loccheck.c  misuse.c  recurse.c  swap1.c  swap2.c  swap3.c  usehotel.c
chapter10/: arf.c  array2d.c  bounds.c  day_mon1.c  day_mon2.c  day_mon3.c  designate.c  exercise10.c  flc.c  no_data.c  order.c  pointer_add.c  pointer_operations.c  rain.c  some_data.c  sum_arr1.c  sum_arr2.c  vararr2d.c  zippo1.c  zippo2.c
chapter11/: arr_ptr.c  compare.c  compback.c  copy1.c  copy2.c  copy3.c  excercise11.c  format.c  fputs.c  hello.c  join_chk.c  mod_str.c  name1.c  name2.c  name3.c  nogo.c  nono.c  p_and_s.c  put1.c  put2.c  put_out.c  put_put.c  quit_chk.c  quotes.c  repeat.c  scan_str.c  sort_str.c  starsrch.c  str_concate.c  strconvert.c  strings.c  test.c
chapter12/: auto_time_seed.c  dice_roll.c  diceroll.h  dyn_arr.c  exercise12.c  forc99.c  global.c  hiding.c  local_stat.c  manydice.c  parta.c  partb.c  r_drive0.c  r_drive1.c  rand0.c  s_and_r.c
chapter13/: addaword.c  append.c  count.c  count.c.red  fflush.c  parrot.c  randbin.c  reducto.c  reverse.c
chapter14/: book.c  booksave.c  complit.c  enum.c  exercise14.c  flexmemb.c  friend.c  friends.c  func_ptr.c  funds.c  funds2.c  funds3.c  funds4.c  manybook.c  names1.c  names2.c  names3.c
chapter15/: binbit.c  bitwise.c  dual_view.c  exercise15.c  fields.c  invert4.c  invert_end.c
chapter16/: assert.c  bye_bye.c  doubleincl.c  glue.c  ifdef.c  mac_arg.c  mac_arg2.c  mems.c  names.c  names.h  predef.c  preproc.c  qsorter.c  rect_pol.c  subst.c  test.c  use_header.c  variadic.c
chapter17/: films.c  films2.c  films3.c  list.c  list.h  mall.c  queue.c  queue.h  use_q.c
