cmake_minimum_required(VERSION 3.7)
project(CPrimerPlus5thEdition)
set(CMAKE_C_STANDARD 99)
#set(SOURCE_FILES chapter02/first.c chapter02/nogood.c chapter02/fathm_ft.c chapter02/two_func.c chapter02/excise8.c chapter02/excise1.c chapter02/exercise2.c)
set(SOURCE_FILES chapter03/rhodium.c chapter03/print1.c chapter03/bases.c chapter03/toobig.c chapter03/print2.c chapter03/charcode.c chapter03/altnames.c chapter03/showfloat.c chapter03/floaterr.c chapter03/typesize.c chapter03/badcount.c chapter03/escape.c chapter03/exercise3.c)
add_executable(CPrimerPlus5thEdition ${SOURCE_FILES})