cmake_minimum_required(VERSION 3.7)
project(CPrimerPlus5thEdition)
set(CMAKE_C_STANDARD 99)
#set(SOURCE_FILES chapter02/first.c chapter02/nogood.c chapter02/fathm_ft.c chapter02/two_func.c chapter02/excise8.c chapter02/excise1.c chapter02/exercise2.c)
#set(SOURCE_FILES chapter03/rhodium.c chapter03/print1.c chapter03/bases.c chapter03/toobig.c chapter03/print2.c chapter03/charcode.c chapter03/altnames.c chapter03/showfloat.c chapter03/floaterr.c chapter03/typesize.c chapter03/badcount.c chapter03/escape.c chapter03/exercise3.c)
#set(SOURCE_FILES chapter04/talkback.c chapter04/praise1.c chapter04/praise2.c chapter04/pizza.c chapter04/constants.c chapter04/defines.c chapter04/printout.c chapter04/wd.c chapter04/floats.c chapter04/flags.c chapter04/strings.c chapter04/intconv.c chapter04/floatcnv.c chapter04/printvalue.c chapter04/longstring.c chapter04/input.c chapter04/varwidth.c chapter04/skip2.c chapter04/exercise04.c)
set(SOURCE_FILES chapter05/shoes1.c chapter05/shoes2.c chapter05/golf.c chapter05/squares.c chapter05/wheat.c chapter05/divide.c chapter05/rules.c chapter05/sizeof.c chapter05/min_sec.c chapter05/add_one.c chapter05/post_pre.c chapter05/bottles.c chapter05/addemup.c chapter05/convert.c)
add_executable(CPrimerPlus5thEdition ${SOURCE_FILES})