cmake_minimum_required(VERSION 3.7)
project(CPrimerPlus5thEdition)
set(CMAKE_C_STANDARD 99)
#set(SOURCE_FILES chapter02/first.c chapter02/nogood.c chapter02/fathm_ft.c chapter02/two_func.c chapter02/excise8.c chapter02/excise1.c chapter02/exercise2.c)
#set(SOURCE_FILES chapter03/rhodium.c chapter03/print1.c chapter03/bases.c chapter03/toobig.c chapter03/print2.c chapter03/charcode.c chapter03/altnames.c chapter03/showfloat.c chapter03/floaterr.c chapter03/typesize.c chapter03/badcount.c chapter03/escape.c chapter03/exercise3.c)
#set(SOURCE_FILES chapter04/talkback.c chapter04/praise1.c chapter04/praise2.c chapter04/pizza.c chapter04/constants.c chapter04/defines.c chapter04/printout.c chapter04/wd.c chapter04/floats.c chapter04/flags.c chapter04/strings.c chapter04/intconv.c chapter04/floatcnv.c chapter04/printvalue.c chapter04/longstring.c chapter04/input.c chapter04/varwidth.c chapter04/skip2.c chapter04/exercise04.c)
#set(SOURCE_FILES chapter05/shoes1.c chapter05/shoes2.c chapter05/golf.c chapter05/squares.c chapter05/wheat.c chapter05/divide.c chapter05/rules.c chapter05/sizeof.c chapter05/min_sec.c chapter05/add_one.c chapter05/post_pre.c chapter05/bottles.c chapter05/addemup.c chapter05/convert.c chapter05/pound.c.c chapter05/running.c chapter05/exercise05.c)
#set(SOURCE_FILES chapter06/recurse.c chapter06/summing.c chapter06/cmpflt.c chapter06/t_and_f.c chapter06/truth.c chapter06/trouble.c chapter06/boolean.c chapter06/sweetie1.c chapter06/sweetie2.c chapter06/for_cube.c chapter06/for_down.c chapter06/for_13a.c chapter06/for_char.c chapter06/for_geo.c chapter06/for_wild.c chapter06/for_none.c chapter06/for_show.c chapter06/postage.c chapter06/zeno.c chapter06/do_while.c chapter06/rows1.c chapter06/row2.c chapter06/scores_in.c chapter06/power.c chapter06/exercise06.c chapter06/exercise06_15_09.c)
#set(SOURCE_FILES chapter07/colddays.c chapter07/cypher1.c chapter07/cypher2.c chapter07/electric.c chapter07/divisors.c chapter07/charcount.c chapter07/wordcount.c chapter07/paint.c chapter07/skippart.c chapter07/break.c chapter07/animals.c chapter07/vowel.c chapter07/excercise07.c)
#set(SOURCE_FILES chapter08/echo.c chapter08/echo_eof.c chapter08/file_eof.c chapter08/guess.c chapter08/showchar1.c chapter08/checking.c chapter08/menuette.c chapter08/excercise08.c)
#set(SOURCE_FILES chapter09/letterhead.c chapter09/letterhead2.c chapter09/lesser.c chapter09/misuse.c chapter09/recurse.c chapter09/factor.c chapter09/binary.c chapter09/usehotel.c chapter09/hotel.c chapter09/hotel.h chapter09/loccheck.c chapter09/swap1.c chapter09/swap2.c chapter09/swap3.c chapter09/excise09.c)
#set(SOURCE_FILES chapter10/day_mon1.c chapter10/no_data.c chapter10/some_data.c chapter10/day_mon2.c chapter10/designate.c chapter10/bounds.c chapter10/rain.c chapter10/pointer_add.c chapter10/day_mon3.c chapter10/sum_arr1.c chapter10/sum_arr2.c chapter10/order.c chapter10/pointer_operations.c chapter10/arf.c chapter10/zippo1.c chapter10/zippo2.c chapter10/array2d.c chapter10/vararr2d.c)
#set(SOURCE_FILES chapter11/strings.c chapter11/quotes.c chapter11/arr_ptr.c chapter11/p_and_s.c chapter11/name1.c chapter11/name2.c chapter11/name3.c chapter11/scan_str.c chapter11/put_out.c chapter11/nono.c chapter11/fputs.c chapter11/put1.c chapter11/put2.c chapter11/put_put.c chapter11/test.c chapter11/str_concate.c chapter11/join_chk.c chapter11/nogo.c chapter11/compare.c chapter11/compback.c chapter11/quit_chk.c chapter11/starsrch.c chapter11/copy1.c chapter11/copy2.c chapter11/copy3.c chapter11/format.c chapter11/sort_str.c chapter11/mod_str.c chapter11/repeat.c chapter11/hello.c chapter11/strconvert.c chapter11/excercise11.c)
set(SOURCE_FILES )
add_executable(CPrimerPlus5thEdition ${SOURCE_FILES})